<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SelectSnekears</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_likes">"Likes"</string>
    <!-- TODO: -->
    <string name="nike_sneake">Nike sneakers</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cost">4 590\u00D1\</string>
    <string name="name" />
    <string name="input">Search</string>
    <string name="size_">Size:</string>
    <string name="size_counter">39</string>
    <string name="text_start_update" />
    <string name="user_email">useremail@email.com</string>
    <string name="new_address">Новый адрес</string>
    <string name="_country">Страна</string>
    <string name="_name_country">Кыргызстан</string>
    <string name="_city">Город</string>
    <string name="_street">Улица</string>
    <string name="_home">Улица/дом/квартира</string>
    <string name="_index">Индекс</string>
    <string name="data_user">Данные получателя</string>
    <string name="_name">Имя</string>
    <string name="_surname">Фамилия</string>
    <string name="_code">Код</string>
    <string name="_email">Электронная почта</string>
    <string name="_save">Сохранить</string>
    <string name="_phone_number">Номер телефона</string>
    <string name="_personal_data">Персональные данные</string>
    <string name="_confirmation">Подтверждение</string>
    <string name="_found_a_mistake">Нашли ошибку?</string>
    <string name="_index2">Индекс</string>
    <string name="_delivery_address">Адрес доставки</string>
    <string name="number">555 123 456</string>
    <string name="code_country">+996</string>
    <string name="_address">Новый адрес</string>
    <string name="_add_new_address">Добавить новый адрес</string>
    <string name="_payment">Оплата</string>
    <string name="_select_payment_method">Выберите способ оплаты</string>
    <string name="_sex_shoes">Мужские кросовки</string>
    <string name="_size">Размер:</string>
    <string name="_quantity_number">1</string>
    <string name="_name_shoes">Называние:</string>
    <string name="_nike_sneakers">Nike sneakers</string>
    <string name="_price">Стоимость:</string>
    <string name="_delivery">Доставка:</string>
    <string name="_price_number">4 590сом</string>
    <string name="_cost_of_delivery">Бесплатно</string>
    <string name="_quantity">Кол-во:</string>
    <string name="_colors">Цвет:</string>
    <string name="_discount">Скидка:</string>
    <string name="_promo_code_discount">Скидка по промокоду:</string>
    <string name="_discount_result">нет</string>
    <string name="_result_promo_code_discount">нет</string>
    <string name="_enter_promo_code">Ввести промокод</string>
    <string name="_total">Итого:</string>
    <string name="_show_price">4 590с</string>
    <string name="_pay_text">Оплатить</string>
    <string name="_confirm">Подтвердить</string>
    <string name="_con_full_name">Имя фамилия</string>
    <string name="_goods">Товары</string>
    <string name="_address2">Адрес</string>
    <string name="my_card">Моя карта</string>
    <string name="el_card">Элкарт</string>
    <string name="mastercard">Mastercard</string>
    <string name="elsom_card">Элсом</string>
    <string name="o_card">O! Деньги</string>
    <string name="_39">39</string>
    <string name="moy_card">Моя карта</string>
    <string name="_4_590c">4 590c</string>
    <string name="headline_address">Адрес доставки</string>
    <string name="this_button_opens_list_the_country">This button opens list the contry</string>
    <string name="select_country">Страна</string>
    <string name="_country_small">Страна</string>
    <string name="icon_cm">icon_cm</string>
    <string name="def_title">Моя карта</string>
    <string name="icon_arrow">icon arrow</string>
    <string name="visa">Visa</string>
    <string name="country_spinner_content_description">country_spinner_content_description</string>
    <string name="_home_">Дом, квартира</string>

</resources>